--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@
         const net_fosters_communities = formData.get('statement8');
         const impacts_health = formData.get('health-impact') + space + formData.get('health-impact-specify');
         const body_state = formData.get('body-state1') + space + formData.get('body-state2') + space + formData.get('body-state3') + space + formData.get('body-state-specify');
-        const concerns = formData.get('platform1') + space + formData.get('platform2') + space + formData.get('platform3') + space + formData.get('platform4') + space + formData.get('platform5') + space + formData.get('platform6') + space + formData.get('platform7') + space +
+        const platforms = formData.get('platform1') + space + formData.get('platform2') + space + formData.get('platform3') + space + formData.get('platform4') + space + formData.get('platform5') + space + formData.get('platform6') + space + formData.get('platform7') + space +
         formData.get('platform8') + space + formData.get('platform9') + space + formData.get('platform10') + space + formData.get('platform11') + space + formData.get('platform12') + space + formData.get('platform13') + space + formData.get('platforms-specify');
         const comments = formData.get('comments');
 
