--- a/public/index.html
+++ b/public/index.html
@@ -71,39 +71,38 @@
           <br>
 
           <p class="question">6: How likely are you to agree with the following statements?
-            <p class="answer">I often fall into time-consuming internet rabbit holes.<br>
-              <input type="radio" name="statement1" value="0"> Strongly Disagree <input type="radio" name="statement1" value="1"> Disagree <input type="radio" name="statement1" value="2"> Neutral <input type="radio" name="statement1" value="3"> Agree <input type="radio" name="statement1" value="4"> Strongly Agree
+            <p class="answer">&#8226; I often fall into time-consuming internet rabbit holes.<br>
+              <input type="radio" name="statement1" value="0"> Strongly Disagree <br> <input type="radio" name="statement1" value="1"> Disagree <br> <input type="radio" name="statement1" value="2"> Neutral <br> <input type="radio" name="statement1" value="3"> Agree <br> <input type="radio" name="statement1" value="4"> Strongly Agree
             </p>
 
-            <p class="answer">I feel like my opinions and ideas are somewhat influenced by the content I see online.<br>
-              <input type="radio" name="statement2" value="0"> Strongly Disagree <input type="radio" name="statement2" value="1"> Disagree <input type="radio" name="statement2" value="2"> Neutral <input type="radio" name="statement2" value="3"> Agree <input type="radio" name="statement2" value="4"> Strongly Agree
+            <p class="answer">&#8226; I feel like my opinions and ideas are somewhat influenced by the content I see online.<br>
+              <input type="radio" name="statement2" value="0"> Strongly Disagree <br> <input type="radio" name="statement2" value="1"> Disagree <br> <input type="radio" name="statement2" value="2"> Neutral <br> <input type="radio" name="statement2" value="3"> Agree <br> <input type="radio" name="statement2" value="4"> Strongly Agree
             </p>
 
-            <p class="answer">Most of the content I see online seems to confirm my opinions.<br>
-              <input type="radio" name="statement3" value="0"> Strongly Disagree <input type="radio" name="statement3" value="1"> Disagree <input type="radio" name="statement3" value="2"> Neutral <input type="radio" name="statement3" value="3"> Agree <input type="radio" name="statement3" value="4"> Strongly Agree
+            <p class="answer">&#8226; Most of the content I see online seems to confirm my opinions.<br>
+              <input type="radio" name="statement3" value="0"> Strongly Disagree <br> <input type="radio" name="statement3" value="1"> Disagree <br> <input type="radio" name="statement3" value="2"> Neutral <br> <input type="radio" name="statement3" value="3"> Agree <br> <input type="radio" name="statement3" value="4"> Strongly Agree
             </p>
 
-            <p class="answer">I’m prone to engage in internet debates with strangers in forums and social media.<br>
-              <input type="radio" name="statement4" value="0"> Strongly Disagree <input type="radio" name="statement4" value="1"> Disagree <input type="radio" name="statement4" value="2"> Neutral <input type="radio" name="statement4" value="3"> Agree <input type="radio" name="statement4" value="4"> Strongly Agree
+            <p class="answer">&#8226; I’m prone to engage in internet debates with strangers in forums and social media.<br>
+              <input type="radio" name="statement4" value="0"> Strongly Disagree <br> <input type="radio" name="statement4" value="1"> Disagree <br> <input type="radio" name="statement4" value="2"> Neutral <br> <input type="radio" name="statement4" value="3"> Agree <br>  <input type="radio" name="statement4" value="4"> Strongly Agree
             </p>
 
-            <p class="answer">I’m prone to engage in debates in real life with people I know.<br>
-              <input type="radio" name="statement5" value="0"> Strongly Disagree <input type="radio" name="statement5" value="1"> Disagree <input type="radio" name="statement5" value="2"> Neutral <input type="radio" name="statement5" value="3"> Agree <input type="radio" name="statement5" value="4"> Strongly Agree
+            <p class="answer">&#8226; I’m prone to engage in debates in real life with people I know.<br>
+              <input type="radio" name="statement5" value="0"> Strongly Disagree <br> <input type="radio" name="statement5" value="1"> Disagree <br> <input type="radio" name="statement5" value="2"> Neutral <br> <input type="radio" name="statement5" value="3"> Agree <br> <input type="radio" name="statement5" value="4"> Strongly Agree
             </p>
 
-            <p class="answer">I feel like I spend too much time on the internet.<br>
-              <input type="radio" name="statement6" value="0"> Strongly Disagree <input type="radio" name="statement6" value="1"> Disagree <input type="radio" name="statement6" value="2"> Neutral <input type="radio" name="statement6" value="3"> Agree <input type="radio" name="statement6" value="4"> Strongly Agree
+            <p class="answer">&#8226; I feel like I spend too much time on the internet.<br>
+              <input type="radio" name="statement6" value="0"> Strongly Disagree <br> <input type="radio" name="statement6" value="1"> Disagree <br> <input type="radio" name="statement6" value="2"> Neutral <br> <input type="radio" name="statement6" value="3"> Agree <br> <input type="radio" name="statement6" value="4"> Strongly Agree
             </p>
 
-            <p class="answer">I often find myself scrolling through news feeds or browsing the internet during idle time.<br>
-              <input type="radio" name="statement7" value="0"> Strongly Disagree <input type="radio" name="statement7" value="1"> Disagree <input type="radio" name="statement7" value="2"> Neutral <input type="radio" name="statement7" value="3"> Agree <input type="radio" name="statement7" value="4"> Strongly Agree
+            <p class="answer">&#8226; I often find myself scrolling through news feeds or browsing the internet during idle time.<br>
+              <input type="radio" name="statement7" value="0"> Strongly Disagree <br> <input type="radio" name="statement7" value="1"> Disagree <br> <input type="radio" name="statement7" value="2"> Neutral <br> <input type="radio" name="statement7" value="3"> Agree <br> <input type="radio" name="statement7" value="4"> Strongly Agree
             </p>
 
-            <p class="answer">I believe the internet fosters the communities which I’m a part of (family and friends, work, hobbies or interests…)<br>
-              <input type="radio" name="statement8" value="0"> Strongly Disagree <input type="radio" name="statement8" value="1"> Disagree <input type="radio" name="statement8" value="2"> Neutral <input type="radio" name="statement8" value="3"> Agree <input type="radio" name="statement8" value="4"> Strongly Agree
+            <p class="answer">&#8226; I believe the internet fosters the communities which I’m a part of (family and friends, work, hobbies or interests…)<br>
+              <input type="radio" name="statement8" value="0"> Strongly Disagree <br> <input type="radio" name="statement8" value="1"> Disagree <br> <input type="radio" name="statement8" value="2"> Neutral <br> <input type="radio" name="statement8" value="3"> Agree <br> <input type="radio" name="statement8" value="4"> Strongly Agree
             </p>
             <br>
-
             <p class="question">7: Do you think your physical and mental health has been impacted (positively or negatively) by your time spent on the internet?</p>
             <p class="answer"><input type="radio" name="health-impact" value="yes">Yes<br>
               <input type="radio" name="health-impact" value="no">No<br>
