--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,8 @@
          + formData.get('platform7') + ' | ' + formData.get('platform8') + ' | ' + formData.get('platform9') + ' | ' + formData.get('platform10') + ' | '
          + formData.get('platform11') + ' | ' + formData.get('platform12') + ' | ' + formData.get('platform13') + ' ' + formData.get('platforms-specify'));
         console.log('Comments: ' + formData.get('comments'));
+        
+        alert("Thank you!");
 
         const space = "||";
         const age = formData.get('age');
